--- a/serenity.properties
+++ b/serenity.properties
@@ -1,7 +1,8 @@
 webdriver.driver=chrome
 webdriver.chrome.driver=src/test/resources/driver/chromedriver.exe
 serenity.project.name = Demo Project using Serenity and Cucumber
-chrome.switches=--start-maximized
+#chrome.switches=--start-maximized
+chrome.switches=--start-maximized --force-device-scale-factor=0.6
 webdriver.timeouts.implicitlywait = 10000
 serenity.take.screenshots=AFTER_EACH_STEP
 serenity.verbose.steps=FALSE
